--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     --green: #4fff4b;
 }
 
+/* Reset */
 body {
     /*
     font-family: 'Arimo', sans-serif;
@@ -15,9 +16,22 @@ body {
     font-family: 'Roboto', sans-serif;
     */
 
-    background-color: var(--purple-bg);
+    background-color: var(--light-purple);
     text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: antialiased !important;
+}
+
+header {
+    background-color: var(--purple-bg);
+    padding: 2rem;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
 }
 
 .container {
@@ -26,15 +40,16 @@ body {
     padding: 0 30px;
 }
 
+/* Nav */
 #main-header nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 2rem;
 }
 
 #main-header nav #navigation span {
     font-family: 'Roboto', sans-serif;
+    font-weight: normal;
     font-size: 18px;
     padding: 1rem;
     color: var(--white);
@@ -61,4 +76,42 @@ body {
     padding: 0.50rem 1rem;
     border-bottom-right-radius: 2px;
     border-top-right-radius: 2px;
+}
+
+/* Section */
+#main-header .container #section-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 2rem;
+    gap: 2rem;
+}
+
+#main-header .container #section-header h1 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 36px;
+    font-weight: bold;
+    color: var(--button-bg);
+    margin-bottom: 2rem;
+}
+
+#main-header .container #section-header p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: normal;
+    color: var(--white);
+    margin-bottom: 2rem;
+}
+
+#main-header .container #section-header a {
+    display: flex;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    color: var(--button-bg);
+}
+
+#main-header .container #section-header a img {
+    padding: 0 0.40rem;
 }
