--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ ul {
 }
 
 .container {
-    max-width: 1170px;
+    max-width: 1410px;
     margin: 0 auto;
     padding: 0 30px;
 }
@@ -130,6 +130,10 @@ ul {
     font-family: 'Roboto', sans-serif;
 }
 
+#main-content .container .entrance-post .initial-post img {
+    width: 100%;
+}
+
 #main-content .container .entrance-post .initial-post p {
     font-size: 16px;
     font-weight: normal;
@@ -166,8 +170,12 @@ ul {
 #main-content .container .other-posts {
     display: flex;
     justify-content: space-between;
-    gap: 0.50rem;
-    margin-bottom: 2rem;
+    gap: 1rem;
+    margin-bottom: 4rem;
+}
+
+#main-content .container .other-posts div img {
+    width: 100%;
 }
 
 #main-content .container .other-posts div p {
@@ -183,4 +191,20 @@ ul {
     font-weight: bold;
     margin-top: 0.75rem;
     color: var(--purple-bg);
+}
+
+/* Footer */
+#footer-content div {
+    display: flex;
+    justify-content: center;
+    background-color: var(--purple-bg);
+    padding: 4rem;
+}
+
+#footer-content div h1 {
+    color: var(--light-purple);
+}
+
+#footer-content div h1 span {
+    color: var(--green);
 }
